[package]
name = "thps-autosplitter"
version = "0.8.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asr = { git = "https://github.com/LiveSplit/asr", branch = "master", features = ["alloc", "signature"] }
once_cell = "1.18.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true

[profile.release.build-override]
opt-level = 0
